--- a/enet/Makefile
+++ b/enet/Makefile
@@ -146,12 +146,12 @@ distuninstallcheck_listfiles = find . -type f -print
 am__distuninstallcheck_listfiles = $(distuninstallcheck_listfiles) \
   | sed 's|^\./|$(prefix)/|' | grep -v '$(infodir)/dir$$'
 distcleancheck_listfiles = find . -type f -print
-ACLOCAL = ${SHELL} /home/bram/projects/ReveladeRevolution-tesseract/enet/missing --run aclocal-1.11
+ACLOCAL = ${SHELL} /home/bram/projects/tesseract/src/enet/missing --run aclocal-1.11
 AMTAR = $${TAR-tar}
 AR = ar
-AUTOCONF = ${SHELL} /home/bram/projects/ReveladeRevolution-tesseract/enet/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/bram/projects/ReveladeRevolution-tesseract/enet/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/bram/projects/ReveladeRevolution-tesseract/enet/missing --run automake-1.11
+AUTOCONF = ${SHELL} /home/bram/projects/tesseract/src/enet/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/bram/projects/tesseract/src/enet/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/bram/projects/tesseract/src/enet/missing --run automake-1.11
 AWK = mawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -159,7 +159,7 @@ CFLAGS = -g -O2
 CPP = gcc -E
 CPPFLAGS = 
 CYGPATH_W = echo
-DEFS = -DPACKAGE_NAME=\"libenet\" -DPACKAGE_TARNAME=\"libenet\" -DPACKAGE_VERSION=\"1.3.6\" -DPACKAGE_STRING=\"libenet\ 1.3.6\" -DPACKAGE_BUGREPORT=\"\" -DPACKAGE_URL=\"\" -DPACKAGE=\"libenet\" -DVERSION=\"1.3.6\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_DLFCN_H=1 -DLT_OBJDIR=\".libs/\" -DHAS_GETHOSTBYADDR_R=1 -DHAS_GETHOSTBYNAME_R=1 -DHAS_POLL=1 -DHAS_FCNTL=1 -DHAS_INET_PTON=1 -DHAS_INET_NTOP=1 -DHAS_MSGHDR_FLAGS=1 -DHAS_SOCKLEN_T=1
+DEFS = -DPACKAGE_NAME=\"libenet\" -DPACKAGE_TARNAME=\"libenet\" -DPACKAGE_VERSION=\"1.3.7\" -DPACKAGE_STRING=\"libenet\ 1.3.7\" -DPACKAGE_BUGREPORT=\"\" -DPACKAGE_URL=\"\" -DPACKAGE=\"libenet\" -DVERSION=\"1.3.7\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_DLFCN_H=1 -DLT_OBJDIR=\".libs/\" -DHAS_GETHOSTBYADDR_R=1 -DHAS_GETHOSTBYNAME_R=1 -DHAS_POLL=1 -DHAS_FCNTL=1 -DHAS_INET_PTON=1 -DHAS_INET_NTOP=1 -DHAS_MSGHDR_FLAGS=1 -DHAS_SOCKLEN_T=1
 DEPDIR = .deps
 DLLTOOL = false
 DSYMUTIL = 
@@ -185,7 +185,7 @@ LIPO =
 LN_S = ln -s
 LTLIBOBJS = 
 MAINT = 
-MAKEINFO = ${SHELL} /home/bram/projects/ReveladeRevolution-tesseract/enet/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/bram/projects/tesseract/src/enet/missing --run makeinfo
 MANIFEST_TOOL = :
 MKDIR_P = /bin/mkdir -p
 NM = /usr/bin/nm -B
@@ -197,21 +197,21 @@ OTOOL64 =
 PACKAGE = libenet
 PACKAGE_BUGREPORT = 
 PACKAGE_NAME = libenet
-PACKAGE_STRING = libenet 1.3.6
+PACKAGE_STRING = libenet 1.3.7
 PACKAGE_TARNAME = libenet
 PACKAGE_URL = 
-PACKAGE_VERSION = 1.3.6
+PACKAGE_VERSION = 1.3.7
 PATH_SEPARATOR = :
 RANLIB = ranlib
 SED = /bin/sed
 SET_MAKE = 
-SHELL = /bin/bash
+SHELL = /bin/sh
 STRIP = strip
-VERSION = 1.3.6
-abs_builddir = /home/bram/projects/ReveladeRevolution-tesseract/enet
-abs_srcdir = /home/bram/projects/ReveladeRevolution-tesseract/enet
-abs_top_builddir = /home/bram/projects/ReveladeRevolution-tesseract/enet
-abs_top_srcdir = /home/bram/projects/ReveladeRevolution-tesseract/enet
+VERSION = 1.3.7
+abs_builddir = /home/bram/projects/tesseract/src/enet
+abs_srcdir = /home/bram/projects/tesseract/src/enet
+abs_top_builddir = /home/bram/projects/tesseract/src/enet
+abs_top_srcdir = /home/bram/projects/tesseract/src/enet
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_DUMPBIN = 
@@ -240,7 +240,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/bram/projects/ReveladeRevolution-tesseract/enet/install-sh
+install_sh = ${SHELL} /home/bram/projects/tesseract/src/enet/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
@@ -277,7 +277,7 @@ enetinclude_HEADERS = \
 lib_LTLIBRARIES = libenet.la
 libenet_la_SOURCES = callbacks.c compress.c host.c list.c packet.c peer.c protocol.c unix.c win32.c
 # see info '(libtool) Updating version info' before making a release
-libenet_la_LDFLAGS = $(AM_LDFLAGS) -version-info 3:0:1
+libenet_la_LDFLAGS = $(AM_LDFLAGS) -version-info 4:0:2
 INCLUDES = -I$(top_srcdir)/include
 ACLOCAL_AMFLAGS = -Im4
 all: all-am
