--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,16 @@ before_install:
   - sudo apt-get -y -qq install build-essential zlib1g-dev
   - mkdir dummyprefix
   - export PREFIX=$PWD/dummyprefix
+  - export PATH=$PWD/dummyprefix/bin
   - hg clone http://hg.libsdl.org/SDL && mkdir SDL_build
+  - (cd SDL && ./autogen.sh)
   - (cd SDL_build && ../SDL/configure --prefix=$PREFIX && make -j5 && make install)
   - hg clone http://hg.libsdl.org/SDL_image
+  - (cd SDL_image && ./autogen.sh)
   - (cd SDL_image && ./configure --prefix=$PREFIX && make -j5 && make install)
   - hg clone http://hg.libsdl.org/SDL_mixer
+  - (cd SDL_mixer && ./autogen.sh)  
   - (cd SDL_mixer && ./configure --prefix=$PREFIX && make -j5 && make install)
-
+  - ls $PREFIX -R
 script:
   - make install
