--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/Theintercooler/RR-enet.git
 [submodule "libraries/uv"]
 	path = libraries/uv
-	url = git@github.com:joyent/libuv.git
+	url = https://github.com/joyent/libuv.git
