Fix pkg-config in travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,16 +21,19 @@ before_install:
   - hg clone http://hg.libsdl.org/SDL && mkdir SDL_build
   - (cd SDL && ./autogen.sh)
   - (cd SDL_build && ../SDL/configure --prefix=$PREFIX && make -j5 && make install)
+  - sudo make install
   
   #SDL2_image
   - hg clone http://hg.libsdl.org/SDL_image
   - (cd SDL_image && ./autogen.sh)
   - (cd SDL_image && ./configure --prefix=$PREFIX && make -j5 && make install)
+  - sudo make install
   
   #SDL2_mixer
   - hg clone http://hg.libsdl.org/SDL_mixer
   - (cd SDL_mixer && ./autogen.sh)  
   - (cd SDL_mixer && ./configure --prefix=$PREFIX && make -j5 && make install)
+  - sudo make install
 
 script:
   - make all
