Attempt to fix cmake travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ before_install:
   - mkdir dummyprefix
   - export PREFIX=$PWD/dummyprefix
   - export PATH=$PATH:$PWD/dummyprefix/bin
+  - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$PWD/dummyprefix
+  - export LD_RUN_PATH=$LD_RUN_PATH:$PWD/dummyprefix
+  - export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:$PWD/dummyprefix
   
   # Download and install automake-1.13.1, required for SDL
   - curl "http://ftp.gnu.org/gnu/automake/automake-1.13.1.tar.gz" > automake-1.13.1.tar.gz
@@ -21,19 +24,16 @@ before_install:
   - hg clone http://hg.libsdl.org/SDL && mkdir SDL_build
   - (cd SDL && ./autogen.sh)
   - (cd SDL_build && ../SDL/configure --prefix=$PREFIX && make -j5 && make install)
-  - sudo make install
   
   #SDL2_image
   - hg clone http://hg.libsdl.org/SDL_image
   - (cd SDL_image && ./autogen.sh)
   - (cd SDL_image && ./configure --prefix=$PREFIX && make -j5 && make install)
-  - sudo make install
   
   #SDL2_mixer
   - hg clone http://hg.libsdl.org/SDL_mixer
   - (cd SDL_mixer && ./autogen.sh)  
   - (cd SDL_mixer && ./configure --prefix=$PREFIX && make -j5 && make install)
-  - sudo make install
 
 script:
   - make all
