--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -71,7 +71,7 @@ set(CLIENT_SOURCES
 	${CMAKE_CURRENT_SOURCE_DIR}/../fpsgame/weapon)
 
 IF(NOT CMAKE_BUILD_TYPE STREQUAL "DEBUG")
-add_definitions( -O3)
+add_definitions( -O3 -DLOG_ENABLE_TRACE -DLOG_ENABLE_DEBUG)
 ENDIF(NOT CMAKE_BUILD_TYPE STREQUAL "DEBUG")
 
 add_executable(${OF_CLIENT_BINARY} ${CLIENT_SOURCES})
