--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,5 +1,4 @@
-add_definitions(-DSERVER -std=gnu++0x)
-add_definitions(-DBINARY_ARCH=${OF_TARGET_ARCH} -DBINARY_OS=${OF_PLATFORM_BIN})
+add_definitions(-DSERVER -std=gnu++0x -DBINARY_ARCH=${OF_TARGET_ARCH} -DBINARY_OS=${OF_PLATFORM_BIN})
 
 if(NOT DEFINED WIN32 AND NOT DEFINED APPLE)
     set(EXTRA_LIBS ${EXTRA_LIBS} -pthread)
@@ -29,7 +28,7 @@ set(SERVER_SOURCES
 set(SERVER_LIBS enet ${OPENGL_LIBRARIES} ${ZLIB_LIBRARIES} ${EXTRA_LIBS})
 
 IF(NOT CMAKE_BUILD_TYPE STREQUAL "DEBUG")
-add_definitions( -O3)
+add_definitions( -O3 -DLOG_ENABLE_TRACE -DLOG_ENABLE_DEBUG)
 ENDIF(NOT CMAKE_BUILD_TYPE STREQUAL "DEBUG")
 
 add_executable(${OF_SERVER_BINARY} ${SERVER_SOURCES})
