--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_definitions(-DSERVER -std=gnu++0x -DBINARY_ARCH=${OF_TARGET_ARCH} -DBINARY_OS=${OF_PLATFORM_BIN})
+add_definitions(-DSERVER -std=gnu++0x -DBINARY_ARCH=${OF_TARGET_ARCH} -DBINARY_OS=${OF_PLATFORM_BIN} -D_DEBUG)
 
 if(NOT DEFINED WIN32 AND NOT DEFINED APPLE)
     set(EXTRA_LIBS ${EXTRA_LIBS} -pthread)
@@ -23,16 +23,19 @@ set(SERVER_SOURCES
 	${CMAKE_CURRENT_SOURCE_DIR}/../engine/worldio.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/../engine/lua.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/../fpsgame/entities.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/../fpsgame/server.cpp)
-
-set(SERVER_LIBS enet ${OPENGL_LIBRARIES} ${ZLIB_LIBRARIES} ${EXTRA_LIBS})
+	${CMAKE_CURRENT_SOURCE_DIR}/../fpsgame/server.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/core_bindings.cpp)
 
 IF(NOT CMAKE_BUILD_TYPE STREQUAL "DEBUG")
 add_definitions( -O3 -DLOG_ENABLE_TRACE -DLOG_ENABLE_DEBUG)
 ENDIF(NOT CMAKE_BUILD_TYPE STREQUAL "DEBUG")
 
 add_executable(${OF_SERVER_BINARY} ${SERVER_SOURCES})
-target_link_libraries(${OF_SERVER_BINARY} ${SERVER_LIBS})
+target_link_libraries(${OF_SERVER_BINARY}
+	${ENET_LIBRARIES}
+	${LUVIT_LIBRARIES}
+	${ZLIB_LIBRARIES}
+	${EXTRA_LIBS})
 
 install(TARGETS
 	${OF_SERVER_BINARY}
