--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,35 @@
 cmake_minimum_required(VERSION 2.8)
 
+if(DEFINED TRAVIS_BUILD)
+	set(INSTALL_LIBRARY_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+	set(INSTALL_ARCHIVE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+	set(INSTALL_RUNTIME_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+	
+	if(CMAKE_SIZEOF_VOID_P EQUAL 8)
+		set(OF_TARGET_ARCH "x64")
+	else()
+		set(OF_TARGET_ARCH "x86")
+	endif()
+	
+	set(OF_CXX_FLAGS "-fomit-frame-pointer -Wall -fsigned-char -fno-exceptions -fno-rtti")
+    if(CMAKE_SYSTEM_NAME MATCHES "Linux")
+        set(OF_PLATFORM_SRC "linux")
+        set(OF_PLATFORM_BIN "linux")
+    elseif(CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
+        set(OF_PLATFORM_SRC "freebsd")
+        set(OF_PLATFORM_BIN "freebsd")
+    elseif(CMAKE_SYSTEM_NAME MATCHES "SunOS")
+        set(OF_PLATFORM_SRC "solaris")
+        set(OF_PLATFORM_BIN "solaris")
+    else()
+        message(FATAL_ERROR "Unsupported operating system.")
+    endif()
+    
+    message("WARNING:")
+    message("Travis build, please do not use on non travis!")
+	message("")
+endif()
+
 IF(NOT CMAKE_BUILD_TYPE STREQUAL "DEBUG")
 message("Building in debug mode")
 ENDIF(NOT CMAKE_BUILD_TYPE STREQUAL "DEBUG")
