--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,16 @@ language: cpp
 before_install:
   # Install dependencies
   - sudo apt-get update
-  - sudo apt-get -y install build-essential zlib1g-dev curl libluajit-5.1-dev
+  - sudo apt-get -y install build-essential zlib1g-dev curl
   
   # Download and install automake-1.13.1, required for SDL
   - curl "http://ftp.gnu.org/gnu/automake/automake-1.13.1.tar.gz" > automake-1.13.1.tar.gz
   - tar -zxvf automake-1.13.1.tar.gz
   - (cd automake-1.13.1 && ./configure && make -j5 && sudo make install)
+  
+  # Luajit
+  - git clone git://github.com/Theintercooler/RR-luajit.git
+  - (cd luajit-2.0 && make && sudo make install)
   
   #SDL2
   - hg clone http://hg.libsdl.org/SDL && mkdir SDL_build
